refactor: resolver avisos High de SonarCloud en servicios y seguridad
- SecurityConfig: comentario justificando csrf disable (API stateless con JWT, sin cookies de sesion). Resuelve Security Hotspot de SonarCloud.
- RolMapper: reemplazar Stream.collect(Collectors.toList()) por Stream.toList() (java:S1612).
- Servicios de course (Clase, Curso, Material, Semana, Tarea, Unidad) y UsuarioService: extraer literales repetidos de ResourceNotFoundException a constantes privadas (java:S1192).
- Sin cambios de logica. Tests verdes tras el refactor.